@@ -1,60 +1,52 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.ingest.common;
 
 import org.elasticsearch.ElasticsearchParseException;
+import org.elasticsearch.ingest.TestTemplateService;
 import org.elasticsearch.test.ESTestCase;
-import org.hamcrest.Matchers;
-import org.joda.time.DateTimeZone;
 
-import java.util.Arrays;
+import java.time.ZoneOffset;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+
+import static org.hamcrest.Matchers.equalTo;
 
 public class DateIndexNameFactoryTests extends ESTestCase {
 
     public void testDefaults() throws Exception {
-        DateIndexNameProcessor.Factory factory = new DateIndexNameProcessor.Factory();
+        DateIndexNameProcessor.Factory factory = new DateIndexNameProcessor.Factory(TestTemplateService.instance());
         Map<String, Object> config = new HashMap<>();
         config.put("field", "_field");
         config.put("date_rounding", "y");
 
-        DateIndexNameProcessor processor = factory.create(null, null, config);
-        assertThat(processor.getDateFormats().size(), Matchers.equalTo(1));
-        assertThat(processor.getField(), Matchers.equalTo("_field"));
-        assertThat(processor.getIndexNamePrefix(), Matchers.equalTo(""));
-        assertThat(processor.getDateRounding(), Matchers.equalTo("y"));
-        assertThat(processor.getIndexNameFormat(), Matchers.equalTo("yyyy-MM-dd"));
-        assertThat(processor.getTimezone(), Matchers.equalTo(DateTimeZone.UTC));
+        DateIndexNameProcessor processor = factory.create(null, null, null, config, null);
+        assertThat(processor.getDateFormats().size(), equalTo(1));
+        assertThat(processor.getField(), equalTo("_field"));
+        assertThat(processor.getIndexNamePrefixTemplate().newInstance(Map.of()).execute(), equalTo(""));
+        assertThat(processor.getDateRoundingTemplate().newInstance(Map.of()).execute(), equalTo("y"));
+        assertThat(processor.getIndexNameFormatTemplate().newInstance(Map.of()).execute(), equalTo("yyyy-MM-dd"));
+        assertThat(processor.getTimezone(), equalTo(ZoneOffset.UTC));
     }
 
     public void testSpecifyOptionalSettings() throws Exception {
-        DateIndexNameProcessor.Factory factory = new DateIndexNameProcessor.Factory();
+        DateIndexNameProcessor.Factory factory = new DateIndexNameProcessor.Factory(TestTemplateService.instance());
         Map<String, Object> config = new HashMap<>();
         config.put("field", "_field");
         config.put("index_name_prefix", "_prefix");
         config.put("date_rounding", "y");
-        config.put("date_formats", Arrays.asList("UNIX", "UNIX_MS"));
+        config.put("date_formats", List.of("UNIX", "UNIX_MS"));
 
-        DateIndexNameProcessor processor = factory.create(null, null, config);
-        assertThat(processor.getDateFormats().size(), Matchers.equalTo(2));
+        DateIndexNameProcessor processor = factory.create(null, null, null, config, null);
+        assertThat(processor.getDateFormats().size(), equalTo(2));
 
         config = new HashMap<>();
         config.put("field", "_field");
@@ -62,8 +54,8 @@ public class DateIndexNameFactoryTests extends ESTestCase {
         config.put("date_rounding", "y");
         config.put("index_name_format", "yyyyMMdd");
 
-        processor = factory.create(null, null, config);
-        assertThat(processor.getIndexNameFormat(), Matchers.equalTo("yyyyMMdd"));
+        processor = factory.create(null, null, null, config, null);
+        assertThat(processor.getIndexNameFormatTemplate().newInstance(Map.of()).execute(), equalTo("yyyyMMdd"));
 
         config = new HashMap<>();
         config.put("field", "_field");
@@ -71,29 +63,31 @@ public class DateIndexNameFactoryTests extends ESTestCase {
         config.put("date_rounding", "y");
         config.put("timezone", "+02:00");
 
-        processor = factory.create(null, null, config);
-        assertThat(processor.getTimezone(), Matchers.equalTo(DateTimeZone.forOffsetHours(2)));
+        processor = factory.create(null, null, null, config, null);
+        assertThat(processor.getTimezone(), equalTo(ZoneOffset.ofHours(2)));
 
         config = new HashMap<>();
         config.put("field", "_field");
         config.put("index_name_prefix", "_prefix");
         config.put("date_rounding", "y");
 
-        processor = factory.create(null, null, config);
-        assertThat(processor.getIndexNamePrefix(), Matchers.equalTo("_prefix"));
+        processor = factory.create(null, null, null, config, null);
+        assertThat(processor.getIndexNamePrefixTemplate().newInstance(Map.of()).execute(), equalTo("_prefix"));
     }
 
     public void testRequiredFields() throws Exception {
-        DateIndexNameProcessor.Factory factory = new DateIndexNameProcessor.Factory();
+        DateIndexNameProcessor.Factory factory = new DateIndexNameProcessor.Factory(TestTemplateService.instance());
         Map<String, Object> config = new HashMap<>();
         config.put("date_rounding", "y");
-        ElasticsearchParseException e = expectThrows(ElasticsearchParseException.class, () -> factory.create(null, null, config));
-        assertThat(e.getMessage(), Matchers.equalTo("[field] required property is missing"));
+        ElasticsearchParseException e = expectThrows(
+            ElasticsearchParseException.class,
+            () -> factory.create(null, null, null, config, null)
+        );
+        assertThat(e.getMessage(), equalTo("[field] required property is missing"));
 
         config.clear();
         config.put("field", "_field");
-        e = expectThrows(ElasticsearchParseException.class, () -> factory.create(null, null, config));
-        assertThat(e.getMessage(), Matchers.equalTo("[date_rounding] required property is missing"));
+        e = expectThrows(ElasticsearchParseException.class, () -> factory.create(null, null, null, config, null));
+        assertThat(e.getMessage(), equalTo("[date_rounding] required property is missing"));
     }
-
 }
